agregado de rell en A3

--- a/pages/musica.html
+++ b/pages/musica.html
@@ -233,25 +233,25 @@
     <footer class="container-fluid">
         <section class="row">
             <div class="col-lg-1 col-xs-1">
-                <a target="_blank" href="https://Instagram.com"><img src="../assets/img/esfera1.webp" alt="Instagram">Instagram</a>
+                <a target="_blank" rel="noopener"  href="https://Instagram.com"><img src="../assets/img/esfera1.webp" alt="Instagram">Instagram</a>
             </div>
             <div class="col-lg-1 col-xs-1">
-                <a target="_blank" href="https://Facebook.com"><img src="../assets/img/esfera2.webp" alt="Facebook">Facebook</a>
+                <a target="_blank" rel="noopener"  href="https://Facebook.com"><img src="../assets/img/esfera2.webp" alt="Facebook">Facebook</a>
             </div>
             <div class="col-lg-1 col-xs-1">
-                <a target="_blank" href="https://Twitter.com"><img src="../assets/img/esfera3 .webp" alt="Twitter">Twitter</a>
+                <a target="_blank" rel="noopener"  href="https://Twitter.com"><img src="../assets/img/esfera3 .webp" alt="Twitter">Twitter</a>
             </div>
             <div class="col-lg-1 col-xs-1">
-                <a target="_blank" href="https://Whatsapp.com"><img src="../assets/img/esfera4.webp" alt="Whatsapp">Whatsapp</a>
+                <a target="_blank" rel="noopener"  href="https://Whatsapp.com"><img src="../assets/img/esfera4.webp" alt="Whatsapp">Whatsapp</a>
             </div>
             <div class="col-lg-1 col-xs-1">
-                <a target="_blank" href="https://Telegram.com"><img src="../assets/img/esfera5.webp" alt="Telegram">Telegram</a>
+                <a target="_blank" rel="noopener"  href="https://Telegram.com"><img src="../assets/img/esfera5.webp" alt="Telegram">Telegram</a>
             </div>
             <div class="col-lg-1 col-xs-1">
-                <a target="_blank" href="https://Gmail.com"><img src="../assets/img/esfera6.webp" alt="Gmail"><p>Gmail</p></a>
+                <a target="_blank" rel="noopener"  href="https://Gmail.com"><img src="../assets/img/esfera6.webp" alt="Gmail"><p>Gmail</p></a>
             </div>
             <div class="col-lg-1 col-xs-1">
-                <a target="_blank" href="https://Linkedin.com"><img src="../assets/img/esfera7.webp" alt="Linkedin">Linkedin</a>
+                <a target="_blank" rel="noopener"  href="https://Linkedin.com"><img src="../assets/img/esfera7.webp" alt="Linkedin">Linkedin</a>
             </div>
         </section>
     </footer>
