--- a/pages/videojuegos.html
+++ b/pages/videojuegos.html
@@ -2215,33 +2215,33 @@
 
     </main>
 
-        <!-- Footer -->
-        <footer class="container-fluid">
-            <section class="row">
-                <div class="col-lg-1 col-xs-1">
-                    <a target="_blank" href="https://Instagram.com"><img src="../assets/img/esfera1.webp" alt="Instagram">Instagram</a>
-                </div>
-                <div class="col-lg-1 col-xs-1">
-                    <a target="_blank" href="https://Facebook.com"><img src="../assets/img/esfera2.webp" alt="Facebook">Facebook</a>
-                </div>
-                <div class="col-lg-1 col-xs-1">
-                    <a target="_blank" href="https://Twitter.com"><img src="../assets/img/esfera3 .webp" alt="Twitter">Twitter</a>
-                </div>
-                <div class="col-lg-1 col-xs-1">
-                    <a target="_blank" href="https://Whatsapp.com"><img src="../assets/img/esfera4.webp" alt="Whatsapp">Whatsapp</a>
-                </div>
-                <div class="col-lg-1 col-xs-1">
-                    <a target="_blank" href="https://Telegram.com"><img src="../assets/img/esfera5.webp" alt="Telegram">Telegram</a>
-                </div>
-                <div class="col-lg-1 col-xs-1">
-                    <a target="_blank" href="https://Gmail.com"><img src="../assets/img/esfera6.webp" alt="Gmail"><p>Gmail</p></a>
-                </div>
-                <div class="col-lg-1 col-xs-1">
-                    <a target="_blank" href="https://Linkedin.com"><img src="../assets/img/esfera7.webp" alt="Linkedin">Linkedin</a>
-                </div>
-            </section>
-        </footer>
-        <!-- Fin Footer -->
+       <!-- Footer -->
+       <footer class="container-fluid">
+        <section class="row">
+            <div class="col-lg-1 col-xs-1">
+                <a target="_blank" rel="noopener"  href="https://Instagram.com"><img src="../assets/img/esfera1.webp" alt="Instagram">Instagram</a>
+            </div>
+            <div class="col-lg-1 col-xs-1">
+                <a target="_blank" rel="noopener"  href="https://Facebook.com"><img src="../assets/img/esfera2.webp" alt="Facebook">Facebook</a>
+            </div>
+            <div class="col-lg-1 col-xs-1">
+                <a target="_blank" rel="noopener"  href="https://Twitter.com"><img src="../assets/img/esfera3 .webp" alt="Twitter">Twitter</a>
+            </div>
+            <div class="col-lg-1 col-xs-1">
+                <a target="_blank" rel="noopener"  href="https://Whatsapp.com"><img src="../assets/img/esfera4.webp" alt="Whatsapp">Whatsapp</a>
+            </div>
+            <div class="col-lg-1 col-xs-1">
+                <a target="_blank" rel="noopener"  href="https://Telegram.com"><img src="../assets/img/esfera5.webp" alt="Telegram">Telegram</a>
+            </div>
+            <div class="col-lg-1 col-xs-1">
+                <a target="_blank" rel="noopener"  href="https://Gmail.com"><img src="../assets/img/esfera6.webp" alt="Gmail"><p>Gmail</p></a>
+            </div>
+            <div class="col-lg-1 col-xs-1">
+                <a target="_blank" rel="noopener"  href="https://Linkedin.com"><img src="../assets/img/esfera7.webp" alt="Linkedin">Linkedin</a>
+            </div>
+        </section>
+    </footer>
+    <!-- Fin Footer -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     </body>
