--- a/pages/videojuegos.html
+++ b/pages/videojuegos.html
@@ -42,8 +42,8 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Musica</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Musica</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
                         <a class="dropdown-item" href="../pages/musica.html">Todo</a>
                         <a class="dropdown-item" href="../pages/musica.html#opening">Opening</a>
                         <a class="dropdown-item" href="../pages/musica.html#Ending">Ending</a>
