cambio de img a webp personajes

--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -1168,7 +1168,7 @@
                                       </button>
                                     </div>
                                     <div class="modal-body">
-                                        <img src="../assets/img/Gregory.png" alt="Gregory">
+                                        <img src="../assets/img/Gregory.webp" alt="Gregory">
                                         Gregory (グレゴリー, Guregorī) es un Sprite macho (confundido con un grillo a veces) con la capacidad de hablar, también es el mayordomo y asistente del Kaio del Norte. Gregory no apareció en el manga original convirtiéndose en un personaje exclusivo del anime, sin embargo tras la llegada de Dragon Ball Z Kai y Dragon Ball Super, Gregory paso a formar parte de la historia principal de la serie.
                                     </div>
                                     <div class="modal-footer">
@@ -1386,7 +1386,7 @@
                                       </button>
                                     </div>
                                     <div class="modal-body">
-                                        <img src="../assets/img/piano.png" alt="Piano">
+                                        <img src="../assets/img/piano.webp" alt="Piano">
                                         Piano (ピアノ, Piano) fue el primer "hijo" del Gran Rey Demonio Piccolo después de su liberación de la técnica Mafuba a manos de Pilaf. Es un ser bastante inteligente, posee forma de pterodáctilo, y a pesar de ser el retoño más longevo del Rey Demonio, este lo trata como una especie de sirviente.
                                     </div>
                                     <div class="modal-footer">
@@ -4216,7 +4216,7 @@
                               </button>
                             </div>
                             <div class="modal-body">
-                                <img src="../assets/img/Cargot.png" alt="Cargot">
+                                <img src="../assets/img/Cargot.webp" alt="Cargot">
                                 Cargot (カルゴ, Karugo), también llamado Cargo o Scargot, es el mejor amigo de Dende, quien murió durante el asalto de Dodoria y Zarbon en la aldea de Muuri.
                             </div>
                             <div class="modal-footer">
@@ -4243,7 +4243,7 @@
                               </button>
                             </div>
                             <div class="modal-body">
-                                <img src="../assets/img/Cymbal.png" alt="Cymbal">
+                                <img src="../assets/img/Cymbal.webp" alt="Cymbal">
                                 Cymbal es el tercer hijo engendrado por Piccolo Daimaoh, y es el más débil de los demonios, a quien le encarga la misión de buscar las Esferas del Dragón.
                             </div>
                             <div class="modal-footer">
@@ -4297,7 +4297,7 @@
                               </button>
                             </div>
                             <div class="modal-body">
-                                <img src="../assets/img/Drum.png" alt="Drum">
+                                <img src="../assets/img/Drum.webp" alt="Drum">
                                 Drum (ド ラ ム), conocido como Tambor en español; es el cuarto hijo de Piccolo Daimaō después de su liberación.
                             <div class="modal-footer">
                               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -4378,7 +4378,7 @@
                               </button>
                             </div>
                             <div class="modal-body">
-                                <img src="../assets/img/Kami.png" alt="Kami">
+                                <img src="../assets/img/Kami.webp" alt="Kami">
                                 Kami (神, Kami Dios), también conocido como Kami-sama (神様, Kami-sama Señor Dios)[1] es un personaje secundario del manga y anime de Dragon Ball. Fue la parte bondadosa de Piccolo Original al realizar la fisión. De esta manera obtuvo el papel de Guardián de la Tierra y lo fue durante un largo periodo de tiempo. Fue quien se encargó de crear las Esferas del Dragón dando vida de esta manera a Shen Long. Anteriormente, él era un habitante del Planeta Namek, aunque durante mucho tiempo lo ignoró completamente.
                             </div>
                             <div class="modal-footer">
