--- a/pages/videojuegos.html
+++ b/pages/videojuegos.html
@@ -280,7 +280,7 @@
                           </div>
                           <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
                             <div class="card-body">
-                              <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallDaimaōFukkatsu.weDragonBallDragondaihikyō.webp" alt="6juego"> Fue el primer juego de Dragon Ball en utilizar el sistema de batalla por cartas,es una secuela de Dragon Ball: Shenlong no Nazo aunque este no utilizaba la batalla con cartas y abarca la saga de Piccolo Daimacu.
+                              <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallDaimaōFukkatsu.webp" alt="6juego"> Fue el primer juego de Dragon Ball en utilizar el sistema de batalla por cartas,es una secuela de Dragon Ball: Shenlong no Nazo aunque este no utilizaba la batalla con cartas y abarca la saga de Piccolo Daimacu.
                             </div>
                           </div>
                         </div>
@@ -325,7 +325,7 @@
                           </div>
                           <div id="collapseEight" class="collapse" aria-labelledby="headingEight" data-parent="#accordionExample">
                             <div class="card-body">
-                              <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBall3GokūDen.weDragonBallDragondaihikyō.webp" alt="8juego"> Abarca toda la historia de Dragon Ball hasta la pelea contra Piccolo,El remake de Wonderswan fue llamado simplemente Dragon Ball.
+                              <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBall3GokūDen.webp" alt="8juego"> Abarca toda la historia de Dragon Ball hasta la pelea contra Piccolo,El remake de Wonderswan fue llamado simplemente Dragon Ball.
                             </div>
                           </div>
                         </div>
@@ -384,7 +384,7 @@
                           </div>
                           <div id="collapseEleven" class="collapse" aria-labelledby="headingEleven" data-parent="#accordionExample">
                             <div class="card-body">
-                              <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZKyōshūSaiyajin.weDragonBallDragondaihikyō.webp" alt="DragonBallZKyōshū!saiyajin">Fue desarrollado por bandai y distribuido por Nintendo Entertainment System.
+                              <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZKyōshūSaiyajin.webp" alt="DragonBallZKyōshū!saiyajin">Fue desarrollado por bandai y distribuido por Nintendo Entertainment System.
                             </div>
                           </div>
                         </div>
@@ -572,7 +572,7 @@
                           </div>
                           <div id="collapseTwentyTwo" class="collapse" aria-labelledby="headingTwentyTwo" data-parent="#accordionExample">
                             <div class="card-body">
-                              <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZIIIRessenJinzōNingen.weDragonBallDragondaihikyō.webp" alt="DragonBallZIII:RessenJinzōNingen!!">Fue desarrollado por bandai y distribuido por Nintendo Entertainment System.
+                              <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZIIIRessenJinzōNingen.webp" alt="DragonBallZIII:RessenJinzōNingen!!">Fue desarrollado por bandai y distribuido por Nintendo Entertainment System.
                             </div>
                           </div>
                         </div>
@@ -642,7 +642,7 @@
                             </div>
                             <div id="collapseTwentySeven" class="collapse" aria-labelledby="headingTwentySeven" data-parent="#accordionExample">
                               <div class="card-body">
-                                <img class="Videojuegos-acordeon-img" src="../assets/img/DragonsBallZAtsumareGokūWorld.weDragonBallDragondaihikyō.webp" alt="DragonBallZ:Atsumare!GokūWorld"> Fue desarrollado y distribuido por Bandai.
+                                <img class="Videojuegos-acordeon-img" src="../assets/img/DragonsBallZAtsumareGokūWorld.webp" alt="DragonBallZ:Atsumare!GokūWorld"> Fue desarrollado y distribuido por Bandai.
                               </div>
                             </div>
                           </div>
@@ -656,7 +656,7 @@
                             </div>
                             <div id="collapseTwentyEight" class="collapse" aria-labelledby="headingTwentyEight" data-parent="#accordionExample">
                               <div class="card-body">
-                                <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallGekitōTenkaichiBudōkai.weDragonBallDragondaihikyō.webp" alt="DragonBall:GekitōTenkaichiBudōkai">Fue desarrollado y distribuido por Bandai y utilizaba el dispositivo Datach Joint Rom System.
+                                <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallGekitōTenkaichiBudōkai.webp" alt="DragonBall:GekitōTenkaichiBudōkai">Fue desarrollado y distribuido por Bandai y utilizaba el dispositivo Datach Joint Rom System.
                               </div>
                             </div>
                           </div>
@@ -701,7 +701,7 @@
                           </div>
                           <div id="collapseTheadingThirty" class="collapse" aria-labelledby="headingThirty" data-parent="#accordionExample">
                             <div class="card-body">
-                              <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZSuperButōden2.weDragonBallDragondaihikyō.webp" alt="DragonBallZ:SuperButōden2">La edición europea incluía únicamente el francés se lanzo para la Super Nintendo Entertainment System.
+                              <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZSuperButōden2.webp" alt="DragonBallZ:SuperButōden2">La edición europea incluía únicamente el francés se lanzo para la Super Nintendo Entertainment System.
                             </div>
                           </div>
                         </div>
@@ -788,7 +788,7 @@
                           </div>
                           <div id="collapseThirtyFive" class="collapse" aria-labelledby="headingThirtyFive" data-parent="#accordionExample">
                             <div class="card-body">
-                             <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZSuperButōden3.weDragonBallDragondaihikyō.webp" alt="DragonBallZ:SuperButōden3">La edición europea incluía únicamente el francés se lanzo para la Super Nintendo Entertainment System.
+                             <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZSuperButōden3.webp" alt="DragonBallZ:SuperButōden3">La edición europea incluía únicamente el francés se lanzo para la Super Nintendo Entertainment System.
                             </div>
                           </div>
                         </div>
@@ -802,7 +802,7 @@
                           </div>
                           <div id="collapseThirtySix" class="collapse" aria-labelledby="headingThirtySix" data-parent="#accordionExample">
                             <div class="card-body">
-                              <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZGokūHishōden.weDragonBallDragondaihikyō.webp" alt="DragonBallZ:GokūHishōden">Se lanzo para la Game Boy.
+                              <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZGokūHishōden.webp" alt="DragonBallZ:GokūHishōden">Se lanzo para la Game Boy.
                             </div>
                           </div>
                         </div>
@@ -830,7 +830,7 @@
                             </div>
                             <div id="collapseThirtyEight" class="collapse" aria-labelledby="headingThirtyEight" data-parent="#accordionExample">
                               <div class="card-body">
-                               <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZIdainaruGokūdensetsu.weDragonBallDragondaihikyō.webp" alt="DragonBallZ:IdainaruGokūdensetsu">Fue desarrollado y distribuido por Bandai.Se lanzo para la PC Engine.
+                               <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZIdainaruGokūdensetsu.webp" alt="DragonBallZ:IdainaruGokūdensetsu">Fue desarrollado y distribuido por Bandai.Se lanzo para la PC Engine.
                               </div>
                             </div>
                           </div>
@@ -875,7 +875,7 @@
                           </div>
                           <div id="collapseFourty" class="collapse" aria-labelledby="headingFourty" data-parent="#accordionExample">
                             <div class="card-body">
-                              <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZShinButōden.weDragonBallDragondaihikyō.webp" alt="DragonBallZ:ShinButōden">Se lanzo para el Sega Saturn.
+                              <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZShinButōden.webp" alt="DragonBallZ:ShinButōden">Se lanzo para el Sega Saturn.
                             </div>
                           </div>
                         </div>
@@ -903,7 +903,7 @@
                           </div>
                           <div id="collapseFourtyTwo" class="collapse" aria-labelledby="headingFourtyTwo" data-parent="#accordionExample">
                             <div class="card-body">
-                              <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZGokūGekitōden.weDragonBallDragondaihikyō.webp" alt="DragonBallZ:GokūGekitōden">Se lanzo para la Game Boy.
+                              <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZGokūGekitōden.webp" alt="DragonBallZ:GokūGekitōden">Se lanzo para la Game Boy.
                             </div>
                           </div>
                         </div>
@@ -917,7 +917,7 @@
                             </div>
                             <div id="collapseFourtyThree" class="collapse" aria-labelledby="headingFourtyThree" data-parent="#accordionExample">
                               <div class="card-body">
-                                <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZSuperGokūDenTotsugeki-Hen.weDragonBallDragondaihikyō.webp" alt="DragonBallZ:SuperGokūDenTotsugeki-Hen">Se lanzo para la Super Nintendo Entertainment System.
+                                <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZSuperGokūDenTotsugeki-Hen.webp" alt="DragonBallZ:SuperGokūDenTotsugeki-Hen">Se lanzo para la Super Nintendo Entertainment System.
                               </div>
                             </div>
                           </div>
@@ -931,7 +931,7 @@
                             </div>
                             <div id="collapseFourtyFour" class="collapse" aria-labelledby="headingFourtyFour" data-parent="#accordionExample">
                               <div class="card-body">
-                                <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZSuperGokūDenKakusei-Hen.weDragonBallDragondaihikyō.webp" alt="DragonBallZ:SuperGokūDenKakusei-Hen">Se lanzo para la Super Nintendo Entertainment System.
+                                <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZSuperGokūDenKakusei-Hen.webp" alt="DragonBallZ:SuperGokūDenKakusei-Hen">Se lanzo para la Super Nintendo Entertainment System.
                               </div>
                             </div>
                           </div>
@@ -1430,7 +1430,7 @@
                         </div>
                         <div id="collapseSeventyOne" class="collapse" aria-labelledby="headingSeventyOne" data-parent="#accordionExample">
                           <div class="card-body">
-                            <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZBattleTaikanKamehameHa2~OssuomeeGokūTenkaichiBudōkai~.weDragonBallDragondaihikyō.webp" alt="DragonBallZBattleTaikanKamehameHa2~OssuomeeGokūTenkaichiBudōkai~">Let's! TV Play son unos videojuegos creados por Bandai.
+                            <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallZBattleTaikanKamehameHa2~OssuomeeGokūTenkaichiBudōkai~.webp" alt="DragonBallZBattleTaikanKamehameHa2~OssuomeeGokūTenkaichiBudōkai~">Let's! TV Play son unos videojuegos creados por Bandai.
                           </div>
                         </div>
                       </div>
@@ -1961,7 +1961,7 @@
                         </div>
                         <div id="collapseOneHundredSeven" class="collapse" aria-labelledby="headingOneHundredSeven" data-parent="#accordionExample">
                           <div class="card-body">
-                           <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallKaiUltimateButōden.weDragonBallDragondaihikyō.webp" alt="DragonBallKai:UltimateButōden">Desarrollado por Game Republic.Se lanzo para la Nintendo DS.
+                           <img class="Videojuegos-acordeon-img" src="../assets/img/DragonBallKaiUltimateButōden.webp" alt="DragonBallKai:UltimateButōden">Desarrollado por Game Republic.Se lanzo para la Nintendo DS.
                           </div>
                         </div>
                       </div>
